add rate and stories apis
