# ACN_backend_service/swagger.yml
@@ -570,7 +570,7 @@ paths:
             type: array
             items:
               type: object
-              example: {'id':1, 'title':'...', 'description':'...', 'number_of_participants':5, 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'image':'<url>', 'tags_info':[{'id':1, 'name':'gmae'}, ...], 'creator_info':{'username':'mrm78','avatar':'<url>'}, 'is_joined':true, 'is_admin':false}
+              example: {'id':1, 'title':'...', 'description':'...', 'number_of_participants':5, 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'image':'<url>','rate':2.5, 'tags_info':[{'id':1, 'name':'gmae'}, ...], 'creator_info':{'username':'mrm78','avatar':'<url>'}, 'is_joined':true, 'is_admin':false}
 
 
   /community/my_communities:
@@ -593,7 +593,7 @@ paths:
             type: array
             items:
               type: object
-              example: {'id':1, 'title':'...', 'description':'...', 'number_of_participants':5, 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'image':'<url>', 'tags_info':[{'id':1, 'name':'gmae'}, ...], 'creator_info':{'username':'mrm78','avatar':'<url>'}, 'is_joined':true, 'is_admin':false}
+              example: {'id':1, 'title':'...', 'description':'...', 'number_of_participants':5, 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'image':'<url>','rate':3.4, 'tags_info':[{'id':1, 'name':'gmae'}, ...], 'creator_info':{'username':'mrm78','avatar':'<url>'}, 'is_joined':true, 'is_admin':false}
 
 
   /community/community_info:
@@ -622,7 +622,7 @@ paths:
           description: success
           schema:
             type: array
-            example: {'id':1, 'title':'...', 'description':'...', 'number_of_participants':5, 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'image':'<url>', 'tags_info':[{'id':1, 'name':'gmae'}, ...], 'creator_info':{'username':'mrm78','avatar':'<url>'}, 'is_joined':true, 'is_admin':false}
+            example: {'id':1, 'title':'...', 'description':'...', 'number_of_participants':5, 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'image':'<url>','rate':3.5, 'tags_info':[{'id':1, 'name':'gmae'}, ...], 'creator_info':{'username':'mrm78','avatar':'<url>'}, 'is_joined':true, 'is_admin':false}
 
 
   /community/create_event:
@@ -1429,3 +1429,94 @@ paths:
               error:
                 type: string
                 example: permission denied
+
+
+  /community/rate_community:
+    post:
+      tags:
+        - Community
+      summary: rate a community
+      description: rate a community
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: body
+        name: community info
+        schema:
+          type: object
+          required:
+          - community_id
+          - value
+          properties:
+            community_id:
+              type: integer
+              example: 5
+            value:
+              type: integer
+              example: 3.5
+      responses:
+        200-1:
+          description: success
+          schema:
+            type: array
+            items:
+              type: object
+              example: {'status':'success', 'average_rate':2.6}
+        200-2:
+          description: failed
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: failed
+              error:
+                type: string
+                example: invalid community id
+        200-3:
+          description: failed (VALUE MUST BE GREATER THAN 0 AND LESS THAN 5 => 0<=value<=5)
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: failed
+              error:
+                type: string
+                example: invalid value
+        200-4:
+          description: failed -> permission denied
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: failed
+              error:
+                type: string
+                example: permission denied
+
+
+  /community/stories:
+    get:
+      tags:
+        - Community
+      summary: get stories (events of communities that user is in and are not passed)
+      description: get stories (events of communities that user is in and are not passed)
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: body
+        name: community info
+      responses:
+        200-1:
+          description: success
+          schema:
+            type: array
+            items:
+              type: object
+              example: {'id':1, 'title':'...', 'description':'...', 'community':1, 'image':<url> 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'begin_time':'2021-04-29T05:43:32.987417+04:30', 'creator_info':{'username':'mrm78','avatar':'<url>'}}
